# resonance

./: .gitignore  Cargo.toml  README.md  diesel.toml  dist-workspace.toml
.github/: install_deps.yml
.github/workflows/: release.yml
backend/: Cargo.toml
backend/migrations/2025-03-03-091440_setup/: down.sql
backend/migrations/2025-03-09-010925_remove_path/: down.sql
backend/migrations/2025-03-14-022645_add_album_to_song/: down.sql  up.sql
backend/src/: audio.rs  blur.rs  cli.rs  database.rs  deps.rs  dirs.rs  download.rs  error.rs  lib.rs  main.rs  mpris.rs  util.rs
backend/src/db/: mod.rs  schema.rs  setup.rs  util.rs
backend/src/models/: mod.rs  playlist.rs  song.rs
backend/src/resonance/: download.rs  mod.rs  search.rs
frontend/: Cargo.toml
frontend/src/: lib.rs  main.rs  message.rs
frontend/src/appearance/: colours.rs  mod.rs  styles.rs
frontend/src/assets/: mod.rs
frontend/src/resonance/: mod.rs  subscription.rs  update.rs  view.rs
frontend/src/screens/: home.rs  mod.rs
frontend/src/screens/home/: mod.rs  widgets.rs
frontend/src/screens/playing/: mod.rs
frontend/src/tasks/: download.rs
frontend/src/widgets/song/: line_view.rs  mod.rs
migrations/2025-03-03-091440_setup/: up.sql
migrations/2025-03-09-010925_remove_path/: up.sql
migrations/2025-06-16-082052_setup/: down.sql  up.sql
migrations/2025-06-16-231946_add_downloaded_status/: down.sql  up.sql
migrations/2025-06-19-100343_make_artist_names_unique/: down.sql  up.sql
src/: cli.rs  database.rs  dirs.rs  download.rs  error.rs  input.rs  lib.rs  main.rs  player.rs  song.rs  state.rs  util.rs
src/assets/: mod.rs
src/audio/: handler.rs  mod.rs
src/common/: dirs.rs
src/common/dirs/: cover.rs  mod.rs  song.rs
src/daemon/: boot.rs  exit.rs  message.rs  mod.rs  subscriptions.rs  view.rs
src/daemon/tasks/: exit.rs  mod.rs
src/daemon/update/: audio.rs  database.rs  mod.rs  screens.rs  settings.rs  tray.rs  windows.rs  ytdlp.rs
src/db/: connect.rs  mod.rs  pool.rs  schema.rs  setup.rs
src/db/handler/: mod.rs
src/error/: impl_from.rs  mod.rs
src/fonts/: mod.rs
src/iced/: types.rs
src/jobs/: mod.rs
src/jobs/download/: mod.rs  song.rs
src/jobs/io/: load_song_bytes.rs  mod.rs
src/jobs/metadata/: song.rs
src/models/: album.rs  artist.rs  get_model.rs  mod.rs  modelsext.rs  playlist.rs  song.rs
src/player/: download.rs  mod.rs
src/resonance/: audio_metadata.rs  download.rs  mod.rs
src/screens/: library.rs  mod.rs  playing.rs  settings.rs
src/settings/: mod.rs
src/tasks/: exit.rs  install_deps.rs
src/tasks/download/: mod.rs  song.rs
src/tray/: mod.rs  subscription.rs
src/util/: mod.rs
src/widgets/: song.rs
src/windows/: main.rs  mod.rs  settings.rs
