[package]
name = "resonance"
version = "2.0.0-dev"
edition = "2024"
authors = ["Marley <marley@marlstar.com>"]
homepage = "https://github.com/Marlstar/resonance"
repository = "https://github.com/Marlstar/resonance"
description = "A desktop music client"
keywords = ["music", "youtube", "spotify"]

[dependencies]
bytes = "1.10.1"
colored = "*"
diesel = { version = "2.2.10", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "6.0.0"
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "sync", "fs", "io-std", "io-util"] }

[dependencies.iced]
version = "0.14.0-dev"
git = "https://github.com/iced-rs/iced.git"
features = [
	"image",
	"svg",
	"sipper",
	"advanced",
	"tokio",
	"fira-sans",
	"wgpu",
	"tiny-skia"
]
