[package]
name = "resonance"
version = "2.0.0-dev"
edition = "2024"
authors = ["Marley <marley@marlstar.com>"]
homepage = "https://github.com/Marlstar/resonance"
repository = "https://github.com/Marlstar/resonance"
description = "A desktop music client"
keywords = ["music", "youtube", "spotify"]

[dependencies]
async-channel = "2.3.1"
bytes = "1.10.1"
colored = "*"
diesel = { version = "2.2.10", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "6.0.0"
essi-ffmpeg = { version = "0.3.0", features = ["native-tls-vendored"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png", "webp"] }
regex = "1.11.1"
rodio = { version = "0.20.1", features = ["crossbeam-channel"] }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "time", "sync", "fs", "io-std", "io-util"] }
tray-icon = "0.20.1"
youtube_dl = { version = "0.10.0", features = ["downloader-native-tls"] }

[dependencies.iced]
version = "0.14.0-dev"
git = "https://github.com/iced-rs/iced.git"
features = [
	"image",
	"svg",
	"sipper",
	"advanced",
	"tokio",
	"fira-sans",
	"wgpu",
	"tiny-skia"
]

# We only need gtk to init tray icons on linux
[target."cfg(target_os = \"linux\")".dependencies]
gtk = "*"
