[package]
name = "resonance_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
youtube_dl = "0.10.0"
directories = "*"
regex = "*"
colored = "*"
diesel = { version = "2.2.7", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
image = { version = "0.25.5", default-features = false, features = ["jpeg", "webp"] }
rodio = { version = "0.20.1", features = ["symphonia-aac", "symphonia-isomp4"] }
orx-linked-list = "3.6.0"
mpris-server = "0.8.1"
futures = "0.3.31"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "time", "sync"] }
hashbrown = "0.15.2"
