[package]
name = "resonance_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
colored = "*"
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }

[dependencies.iced]
version = "0.14.0-dev"
# git = "https://github.com/iced-rs/iced.git"
git = "https://github.com/edwloef/iced.git"
branch = "fix_rectangle_snap"
no-default-features = true
features = [
	"image",
	"svg",
	"advanced",
	"fira-sans",
	"wgpu",
	"tiny-skia"
]

[dependencies.backend]
path = "../backend"
package = "resonance_backend"
